	And if it does, then do the same procedure as if it was a -journal (read-only database that gets copied to a temp location)
	This was pointed to me by Svante
	- [PREFETCH input] Changed the default output so that loaded DLLs are not included by default, unless the -d|--detail
	option/parameter is used.


Version 0.62 (23/11/2011)
	- [FF_CACHE input] New input module, designed to parse the cache files of Firefox. Contributed by John Ritchie
	- [OPENVPN input] New input module, desigend to parse the OpenVPN log files.
	- [L2T_PROCESS] Added a few more allowed characters in the keyword list
	- [proftpd_xferlog input] Willi Ballenthin added a new module to parse the ProFTPD XFerlog file
	- [Log2Timeline library] Fixed a bug, when the 'all' moduiles option is used (or -f is omitted) no modules get loaded
		-Added a small change to try to parse the MFT directly even though the $MFT might not be directly visible
		-Fixed a small bug whereas the tool would crash if the local timezone was used.
		-Fixed a small bug whereas the tool is not able to find the default directory (. does not exist) or if the file in 
		question does not really exist that the tool is pointing to... that made the tool return a double error instead of 
		just dying on the first one.
		-The tool will now accept a separate output timezone so the tool can output in a different timezone than the hosts one.
	- [log2timeline] Added the -Z ZONE parameter so the tool can output in a different timezone than the host timezone.
		- added a -d parameter (detail) that instructs the MFT input module to include $FN timestamps in addition to $SN
	- [CSV output] Changed the output timezone so it now prints using the -Z definition, so it now supports different output
	timezone than the host one.
	- [EVTX input] Fixed a bug in where the tool could go into a endless loop in the case where you have a EVTX that is 