@@ -392,9 +392,9 @@ sub _regscan
 
   	my $name = $key->as_string();
   	$name =~ s/\$\$\$PROTO\.HIV//;
-	$name =~ s/^SAM//;
+	#$name =~ s/^SAM//;
   	$name = (split(/\[/,$name))[0];
-	#$name =~ s/^CMI-CreateHive{[A-F0-9_\-]+}//;
+	$name =~ s/^CMI-CreateHive{[A-F0-9_\-]+}//;
 	$name =~ s/^\\//;
 	$name =~ s/\s//g;
 	
