@@ -21,3 +21,11 @@ software
 system
 sam
 mft
+ff_cache
+mcafeefireup
+mcafeehel
+mcafeehs
+openvpn
+skype_sql
+security
+symantec
