@@ -18,3 +18,11 @@ win_link
 xpfirewall
 wmiprov
 mft
+ff_cache
+mcafeefireup
+mcafeehel
+mcafeehs
+openvpn
+skype_sql
+security
+symantec
