@@ -19,3 +19,11 @@ win_link
 xpfirewall
 wmiprov
 mft
+ff_cache
+mcafeefireup
+mcafeehel
+mcafeehs
+openvpn
+skype_sql
+security
+symantec
