@@ -5,6 +5,9 @@ Version 0.63
 	This was pointed to me by Svante
 	- [PREFETCH input] Changed the default output so that loaded DLLs are not included by default, unless the -d|--detail
 	option/parameter is used.
+	- [SAM input] Changed the handling of SAM database data, it did not properly parse the SAM database file in certain cases
+	due to the keys being prefilled with the CMI-CREATE....
+	- [NTUSER input] Changed a value check in UserAssist key parsing causing UserAssist keys not properly being parsed.
 
 
 Version 0.62 (23/11/2011)
